Fixed sort order and unit list not showing

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1111,7 +1111,7 @@
 
 .editorClassName {
   resize: vertical;
-  min-height: 20rem;
+  // min-height: 20rem;
   max-height: 100rem;
   &.dark {
     background-color: $gray-700;
